--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-6</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-   <header>
+   <header class="text-center p-4">
         <h1>AI Universe Hub</h1>
+        <button class="btn mt-2" style="background-color: #EB5757; color: white;">Sort By Data</button>
    </header>
+   
    <main class="container">
         <section>
-            <div id="hubs-container" class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col">
-                  
-                  </div>
+            <div id="hubs-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
                 </div>
 
               </div>
