--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="text-center p-4 bg-wh text-gree">
+    <header class="text-center p-4 bg-wh text-gree ">
         <h1>AI Universe Hub</h1>
         <button class="btn mt-2" style="background-color: #EB5757; color: white;">Sort By Data</button>
    </header>
@@ -23,7 +23,7 @@
             <div id="no-found-message" class="mt-4 d-none">
                 <h3 class="text-warning">No Phone Found. Please try a new search</h3>
             </div>
-            <div id="show-all" class="text-center d-none">
+            <div id="show-all" class="text-center pt-2 d-none">
                 <div id="btn-show-all" class="btn btn-primary">Show All</div>
             </div>
         </section>
@@ -31,7 +31,7 @@
         <section id="loader" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
                 <div class="spinner-border  text-success" role="status">
-                    <span class="visually-hidden">Loading...</span>
+                    <span class="visually-hidden ">Loading...</span>
                 </div>
             </div>
         </section>
