--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <button class="btn mt-2" style="background-color: #EB5757; color: white;">Sort By Data</button>
    </header>
     <main class="container">
-        <!-- display Search Result -->
+        
         <section>
-            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="site-container" class="row row-cols-1 row-cols-md-3 g-4">
 
             </div>
             
             <div id="show-all" class="text-center pt-2 d-none">
-                <div id="btn-show-all" class="btn btn-primary">Show All</div>
+                <div id="btn-show-all" class="btn btn-danger">See More</div>
             </div>
         </section>
         <!-- loader -->
